[gd_scene load_steps=4 format=3 uid="uid://df3d1kotuqjxk"]

[ext_resource type="Script" path="res://Scripts/Card.gd" id="1_g6sxm"]
[ext_resource type="Texture2D" uid="uid://3dvjmjdnmkjn" path="res://Art/Sprites/icon.svg" id="2_8j3e7"]
[ext_resource type="Texture2D" uid="uid://djrej2n5jsko6" path="res://Art/Sprites/Cards/Action.png" id="2_rnawh"]

[node name="Card" type="Control"]
clip_contents = true
custom_minimum_size = Vector2(250, 350)
layout_direction = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -175.0
offset_right = 125.0
offset_bottom = 175.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(125, 175)
mouse_default_cursor_shape = 2
script = ExtResource("1_g6sxm")

[node name="CardBG" type="TextureRect" parent="."]
layout_mode = 1
offset_right = 250.0
offset_bottom = 350.0
mouse_filter = 2
texture = ExtResource("2_rnawh")

[node name="Control" type="MarginContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(250, 350)
layout_mode = 1
offset_right = 250.0
offset_bottom = 350.0
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 13
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="Text" type="VBoxContainer" parent="Control"]
layout_direction = 2
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Control/Text"]
layout_direction = 2
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Control/Text/HBoxContainer"]
custom_minimum_size = Vector2(52, 2.08165e-12)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 40
text = "A"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="Control/Text/HBoxContainer"]
custom_minimum_size = Vector2(170, 2.08165e-12)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 25
text = "Title
"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/Text"]
layout_direction = 2
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="Requirement" type="Label" parent="Control/Text/HBoxContainer2"]
custom_minimum_size = Vector2(52, 2.08165e-12)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "R"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 1
uppercase = true

[node name="CardArt" type="TextureRect" parent="Control/Text/HBoxContainer2"]
custom_minimum_size = Vector2(2.08165e-12, 132)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
texture = ExtResource("2_8j3e7")
stretch_mode = 2

[node name="Popup" type="ColorRect" parent="Control/Text/HBoxContainer2/CardArt"]
visible = false
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.784314)

[node name="PopupText" type="RichTextLabel" parent="Control/Text/HBoxContainer2/CardArt/Popup"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -50.0
offset_right = 75.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true
text = "Tempo
"
fit_content = true

[node name="MarginContainer" type="MarginContainer" parent="Control/Text"]
custom_minimum_size = Vector2(2.08165e-12, 110)
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 2

[node name="Description" type="RichTextLabel" parent="Control/Text/MarginContainer"]
layout_mode = 2
tooltip_text = "Description of Card goes here"
mouse_filter = 1
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true
text = "[center]This is where the card description goes.[/center]"

[node name="Level" type="Label" parent="Control/Text"]
layout_mode = 2
theme_override_font_sizes/font_size = 5
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="meta_hover_ended" from="Control/Text/MarginContainer/Description" to="." method="_hide_tooltip"]
[connection signal="meta_hover_started" from="Control/Text/MarginContainer/Description" to="." method="_show_tooltip"]
